--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-h5-audio-player": "^3.10.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
